tests/baselines/reference/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.errors.txt
inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts(7,7): error TS2415: Class 'C' incorrectly extends base class 'B'.
  Property 'myMethod' is private in type 'A' but not in type 'C'.


==== inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts (1 errors) ====
    class A {
        private myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! error TS2415: Class 'C' incorrectly extends base class 'B'.
!!! error TS2415:   Property 'myMethod' is private in type 'A' but not in type 'C'.
        public myMethod() { }
    }
    